pxc/tests/test_130_constvec/csvec2.px
namespace csvec2;
public import core::common -;

{
  csvarray{int} v;
  v.push_back(3);
  v.push_back(4);
  v.push_back(5);
  v[0] = 5; // error
  println(v);
}
